syntax = "proto3";

package shortener;

option go_package = "github.com/ruslantos/go-shortener-service/api";

service Shortener {
  rpc CreateShortURL(OriginalURL) returns (ShortURL) {}
  rpc GetOriginalURL(ShortURL) returns (OriginalURL) {}
  rpc Ping(Empty) returns (PingResponse) {}
  rpc CreateShortURLBatch(OriginalURLsBatch) returns (ShortURLsBatch) {}
  rpc GetUserURLs(Empty) returns (UserURLs) {}
  rpc DeleteUserURLs(DeleteUserURLsRequest) returns (Empty) {}
  rpc GetStats(Empty) returns (Stats) {}
}

message OriginalURL {
  string url = 1;
}

message ShortURL {
  string url = 1;
}

message Empty {}

message PingResponse {
  bool success = 1;
}

message OriginalURLsBatch {
  repeated OriginalURL urls = 1;
}

message ShortURLsBatch {
  repeated ShortURL urls = 1;
}

message UserURLs {
  repeated UserURL urls = 1;
}

message UserURL {
  string short_url = 1;
  string original_url = 2;
}

message DeleteUserURLsRequest {
  repeated string urls = 1;
}

message Stats {
  int64 urls = 1;
  int64 users = 2;
}